--- a/configure.ac
+++ b/configure.ac
@@ -116,7 +116,7 @@ AC_CONFIG_FILES([config.pri version.h])
 
 AC_OUTPUT
 
-if ! $QMAKE -r; then
+if ! $QMAKE -r sonic-annotator.pro; then
    AC_MSG_ERROR([qmake failed: Command was "$QMAKE -r"])
 fi
 
