Platform-specific file extension

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ before_install:
   - ( cd ../ ; hg clone https://code.soundsoftware.ac.uk/hg/vamp-plugin-sdk )
   - ( cd ../ ; hg clone https://code.soundsoftware.ac.uk/hg/vamp-test-plugin )
   - ( mkdir ~/vamp )
-  - ( cd ../vamp-plugin-sdk ; if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then make -f build/Makefile.osx plugins ; else ./configure --disable-programs && make plugins; fi ; cp examples/vamp-example-plugins.so ~/vamp/ )
-  - ( cd ../vamp-test-plugin ; if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then make -f Makefile.osx ; else make -f Makefile.linux ; fi ; cp vamp-test-plugin.so ~/vamp/ )
+  - ( cd ../vamp-plugin-sdk ; if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then make -f build/Makefile.osx plugins && cp examples/vamp-example-plugins.dylib ~/vamp/ ; else ./configure --disable-programs && make plugins && cp examples/vamp-example-plugins.so ~/vamp/ ; fi )
+  - ( cd ../vamp-test-plugin ; if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then make -f Makefile.osx && cp vamp-test-plugin.dylib ~/vamp/ ; else make -f Makefile.linux && cp vamp-test-plugin.so ~/vamp/ ; fi )
 
 before_script:
   - if [[ "$TRAVIS_OS_NAME" = "linux" ]] ; then ./configure ; else ./vext install && qmake -r sonic-annotator.pro ; fi
