--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then export PATH=$PATH:/usr/local/opt/qt5/bin ; fi
   - ( cd ../ ; hg clone https://code.soundsoftware.ac.uk/hg/vamp-plugin-sdk )
   - ( cd ../ ; hg clone https://code.soundsoftware.ac.uk/hg/vamp-test-plugin )
-  - ( mkdir ~/vamp )
-  - ( cd ../vamp-plugin-sdk ; if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then make -f build/Makefile.osx plugins && cp examples/vamp-example-plugins.dylib ~/vamp/ ; else ./configure --disable-programs && make plugins && cp examples/vamp-example-plugins.so ~/vamp/ ; fi )
-  - ( cd ../vamp-test-plugin ; if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then make -f Makefile.osx && cp vamp-test-plugin.dylib ~/vamp/ ; else make -f Makefile.linux && cp vamp-test-plugin.so ~/vamp/ ; fi )
+  - ( if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then mkdir -p ~/Library/Audio/Plug-Ins/Vamp ; else mkdir ~/vamp ; fi )
+  - ( cd ../vamp-plugin-sdk ; if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then make -f build/Makefile.osx plugins && cp examples/vamp-example-plugins.dylib ~/Library/Audio/Plug-Ins/Vamp/ ; else ./configure --disable-programs && make plugins && cp examples/vamp-example-plugins.so ~/vamp/ ; fi )
+  - ( cd ../vamp-test-plugin ; if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then make -f Makefile.osx && cp vamp-test-plugin.dylib ~/Library/Audio/Plug-Ins/Vamp/ ; else make -f Makefile.linux && cp vamp-test-plugin.so ~/vamp/ ; fi )
 
 before_script:
   - if [[ "$TRAVIS_OS_NAME" = "linux" ]] ; then ./configure ; else ./vext install && qmake -r sonic-annotator.pro ; fi
