--- a/repoint-project.json
+++ b/repoint-project.json
@@ -18,6 +18,11 @@
             "vcs": "hg",
 	    "service": "soundsoftware"
         },
+        "checker": {
+            "vcs": "hg",
+	    "service": "soundsoftware",
+	    "repository": "vamp-plugin-load-checker"
+        },
         "piper-cpp": {
             "vcs": "git",
 	    "service": "github",
