--- a/repoint-project.json
+++ b/repoint-project.json
@@ -16,18 +16,18 @@
         },
         "svcore": {
             "vcs": "hg",
-	    "service": "soundsoftware"
+	    "service": "soundsoftware",
+	    "branch": "bqaudiostream"
         },
         "checker": {
             "vcs": "hg",
 	    "service": "soundsoftware",
 	    "repository": "vamp-plugin-load-checker"
         },
-        "piper-cpp": {
+        "piper-vamp-cpp": {
             "vcs": "git",
 	    "service": "github",
-	    "owner": "piper-audio",
-            "repository": "piper-vamp-cpp"
+	    "owner": "piper-audio"
         },
         "dataquay": {
             "vcs": "hg",
@@ -45,6 +45,16 @@
             "owner": "breakfastquay"
         },
         "bqresample": {
+            "vcs": "hg",
+            "service": "bitbucket",
+            "owner": "breakfastquay"
+        },
+        "bqthingfactory": {
+            "vcs": "hg",
+            "service": "bitbucket",
+            "owner": "breakfastquay"
+        },
+        "bqaudiostream": {
             "vcs": "hg",
             "service": "bitbucket",
             "owner": "breakfastquay"
