--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
-dist:
-  - trusty
-
 language:
   - cpp
-
-sudo:
-  - false
 
 os:
   - linux
   - osx
+
+dist:
+  - xenial
+
+sudo:
+  - required
+
+osx_image:
+  - xcode9
 
 addons:
   apt:
