Update to compatibility with by-id branch of svcore

--- a/repoint-project.json
+++ b/repoint-project.json
@@ -17,7 +17,7 @@
         "svcore": {
             "vcs": "hg",
 	    "service": "soundsoftware",
-	    "branch": "bqaudiostream"
+	    "branch": "by-id"
         },
         "checker": {
             "vcs": "hg",
