--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,12 +1,13 @@
 
 image:
-  - Visual Studio 2017
+  - Visual Studio 2019
 
 configuration:
   - Release
 
 install:
   - cinst --allow-empty-checksums smlnj
+  - cinst hg
   - ps: '"[hostfingerprints]" | Out-File -Encoding "ASCII" -Append $env:USERPROFILE\mercurial.ini'
   - ps: '"code.soundsoftware.ac.uk = C7:27:7E:2C:1E:67:62:90:E9:8D:27:52:66:30:E6:FE:D4:2C:C5:30" | Out-File -Encoding "ASCII" -Append $env:USERPROFILE\mercurial.ini'
   - ps: '"[hostsecurity]" | Out-File -Encoding "ASCII" -Append $env:USERPROFILE\mercurial.ini'
