--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,9 @@
-
+# We currently use VS2017 for 32-bit and VS2019 image for 64-bit
+# builds. This is pending updating our 32-bit (MinGW) library
+# compatibility for MinGW 7.x.
+#
 image:
+  - Visual Studio 2017
   - Visual Studio 2019
 
 configuration:
@@ -13,6 +17,21 @@ install:
   - ps: '"[hostsecurity]" | Out-File -Encoding "ASCII" -Append $env:USERPROFILE\mercurial.ini'
   - ps: '"code.soundsoftware.ac.uk = code.soundsoftware.ac.uk:fingerprints=sha256:AF:67:D8:D6:D8:2F:28:FF:B9:1A:4D:CD:6A:93:25:EC:9E:47:9E:0E:E7:F1:FD:0B:97:B4:7C:D5:FA:2E:10:73" | Out-File -Encoding "ASCII" -Append $env:USERPROFILE\mercurial.ini'
 
-build_script:
-  - deploy\win\build-both.bat
+for:
+
+-
+  matrix:
+    only:
+      - image: Visual Studio 2017
+      
+  build_script:
+    - deploy\win\build-32.bat
+
+-
+  matrix:
+    only:
+      - image: Visual Studio 2019
+      
+  build_script:
+    - deploy\win\build-64.bat
 
