First cut at Linux AppImage

--- a/.hgignore
+++ b/.hgignore
@@ -23,8 +23,28 @@ bqvec
 bqfft
 bqresample
 sv-dependency-builds
-glob:.repoint-*.bin
-glob:.repoint-*.bin
 build_win32
 build_win64
 glob:.repoint*
+Makefile.*
+.qmake.stash
+re:^autom4te\.cache/
+re:^sonic-annotator$
+re:^aclocal\.m4$
+re:^config\.log$
+re:^config\.pri$
+re:^config\.status$
+tmp*
+test-svcore-base
+test-svcore-data-fileio
+test-svcore-data-model
+test-svcore-system
+vgcore*
+valgrind.log
+Dockerfile*.gen
+squashfs-root
+.notarization-uuid
+.notarization-status
+build_win64_debug
+*.AppImage
+*.AppDir
