AppImage seems to insist on having an icon

--- a/sonic-annotator.desktop
+++ b/sonic-annotator.desktop
@@ -2,6 +2,7 @@
 Name=Sonic Annotator
 Comment=Batch feature extraction from audio files
 Exec=sonic-annotator
+Icon=sonic-visualiser
 Terminal=true
 NoDisplay=true
 Type=Application
